fix: styles in dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -317,12 +317,12 @@
 		--border-color: #eaeaea;
 	}
 
-	@media (prefers-color-scheme: dark) {
+	/* @media (prefers-color-scheme: dark) {
 		:root {
 			--text-primary: #fff;
 			--text-secondary: #a0a0a0;
 			--card-bg: #1a1a1a;
 			--border-color: #333;
 		}
-	}
+	} */
 }
